@@ -8,8 +8,8 @@
         {  
             "properties": {
                 "id": {
-                    "type": ["string", "null"],
-                    "description": "Hex encoded 64 random bits ID of the error.",
+                    "type": ["string"],
+                    "description": "Hex encoded 128 random bits ID of the error.",
                     "maxLength": 1024
                 },
                 "trace_id": {
@@ -27,7 +27,8 @@
                     "type": ["string", "null"],
                     "maxLength": 1024
                 }
-            }
+            },
+            "required": ["id"]
         }
     ]
 }
